--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "bootstrap": "^3.1.1",
-    "css-loader": "^0.23.1",
     "config": "^1.20.1",
+    "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
+    "howler": "^1.1.29",
     "html-loader": "^0.4.3",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
